--- a/Daniel-style.css
+++ b/Daniel-style.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
     color: firebrick;
-    background-color: darkolivegreen;
+    background-color:black;
     width: fit-content;
 }
 p {
