--- a/Daniel-style.css
+++ b/Daniel-style.css
@@ -9,6 +9,8 @@ h1 {
 p {
     background-color: chocolate;
     width: fit-content;
+    width: 800 px;
+    margin: 0 auto
 }
 h2 {
     background-color:darkolivegreen;
