--- a/Daniel-style.css
+++ b/Daniel-style.css
@@ -5,12 +5,15 @@ h1 {
     color: firebrick;
     background-color:black;
     width: fit-content;
+    float:none;
 }
 p {
     background-color: chocolate;
     width: fit-content;
+    float:none;
 }
 h2 {
     background-color:darkolivegreen;
     width: fit-content;
+    float:none;
 }
